Fix text wrap and buttons on mobile.

--- a/static/sass/_pattern_cube-table.scss
+++ b/static/sass/_pattern_cube-table.scss
@@ -143,6 +143,14 @@
   @media only screen and (max-width: $breakpoint-medium) {
     tr {
       td {
+        white-space: normal;
+      }
+    }
+  }
+
+  @media only screen and (min-width: $breakpoint-x-small) and (max-width: $breakpoint-medium) {
+    tr {
+      td {
         a:not(:first-of-type) {
           margin-left: 1rem;
         }
